--- a/static/css/widgets.less
+++ b/static/css/widgets.less
@@ -195,3 +195,7 @@
     }
   }
 }
+
+.svx_pose_container {
+  display: inline-block;
+}
